Nala Fraud Detector & Insights

--- a/Desafio Nala EDA and Categ.ipynb
+++ b/Desafio Nala EDA and Categ.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"font-family: Arial; font-size:1.6em;color:Blue;\"><b> Desafío Data Science Nala </b><br>\n",
-    "Aguirre Agustin L.</p>"
+    "# Desafío Data Science Nala \n",
+    "## Aguirre Agustin L."
    ]
   },
   {
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Desafio Nala"
+    "## Desafio Nala - Fraud Detector & Insights"
    ]
   },
   {
